[OD12-2457] - Resolved alignment issue in product view in shop page(only in firefox)

--- a/skit_addons/skit_website_wet_market/static/src/css/sale_order.css
+++ b/skit_addons/skit_website_wet_market/static/src/css/sale_order.css
@@ -324,7 +324,7 @@
 	height: 144px;
     width: 30%;
     float: left;
-    display: table;
+    /* display: table; */
 }
 .oe_product{
 	margin: 1%;
@@ -345,7 +345,7 @@
 	height: 144px;
     width: 30%;
     float: left;
-    display: table;
+    /* display: table; */
 }
 .oe_product{
 	margin: 1%;
@@ -366,7 +366,7 @@
 	height: 144px;
     width: 48%;
     float: left;
-    display: table;
+    /* display: table; */
 }
 .oe_product{
 	margin: 1%;
